# godot-python

./: .gitmodules  LICENSE  README.md  conanfile.py
src/: CMakeLists.txt  mancala.cpp
src/executable/: CMakeLists.txt  main.cpp
src/godot/: CMakeLists.txt  api.c  godot_mancala.gdnlib  godot_mancala.gdns  mancala.cpp  mancala.h
src/lib/: CMakeLists.txt  mancala.h
src/py_mancala/: __init__.py  mancala.py
